--- a/chats.html
+++ b/chats.html
@@ -35,5 +35,52 @@
         </div>
       </div>
     </header>
+    <main class="chats">
+      <div class="search-bar">
+        <i class="fa fa-search"></i>
+        <input type="text" placeholder="Find friends, chats, Plus Friends" />
+      </div>
+      <ul class="chats_list">
+        <li class="chats_chat">
+          <div class="chat_content">
+            <img src="images/avatar.jpg" />
+            <div class="chat_preview">
+              <h3 class="chat_user">Lynn</h3>
+              <span class="chat_last-message"
+                >Hello! This is a test message.</span
+              >
+            </div>
+          </div>
+          <span class="chat_date-time"> 15:55 </span>
+        </li>
+        <li class="chats_chat">
+          <div class="chat_content">
+            <img src="images/avatar.jpg" />
+            <div class="chat_preview">
+              <h3 class="chat_user">KakaoTalk</h3>
+              <span class="chat_last-message"
+                >You logged into KakaoTalk PC</span
+              >
+            </div>
+          </div>
+          <span class="chat_date-time"> Jul 29 </span>
+        </li>
+      </ul>
+      <div class="chat-btn"><i class="fa fa-comment"></i></div>
+    </main>
+    <nav class="tab-bar">
+      <a href="index.html" class="tab-bar_tab">
+        <i class="fa fa-user"></i> <span class="tab-bar_title">Friends</span>
+      </a>
+      <a href="chats.html" class="tab-bar_tab tab-bar_tab--selected">
+        <i class="fa fa-comment"></i> <span class="tab-bar_title">Chats</span>
+      </a>
+      <a href="find.html" class="tab-bar_tab">
+        <i class="fa fa-search"></i> <span class="tab-bar_title">Find</span>
+      </a>
+      <a href="more.html" class="tab-bar_tab">
+        <i class="fa fa-ellipsis-h"></i> <span class="tab-bar_title">More</span>
+      </a>
+    </nav>
   </body>
 </html>
