--- a/index.html
+++ b/index.html
@@ -36,5 +36,52 @@
         <div class="header_column"><i class="fa fa-cog fa-lg"></i></div>
       </div>
     </header>
+    <main class="friends">
+      <div class="search-bar">
+        <i class="fa fa-search"></i>
+        <input type="text" placeholder="Find friends, chats, Plus Friends" />
+      </div>
+      <section class="friends_section">
+        <header><h6 class="friends_section-title">My Profile</h6></header>
+        <div class="friends_section-rows">
+          <div class="friends_section-row">
+            <img src="" alt="" />
+            <span class="friends_section-name">Nicolas</span>
+          </div>
+          <div class="friends_section-row">
+            <img src="" alt="" />
+            <span class="friends_section-name">Friends' Names Display</span>
+          </div>
+        </div>
+      </section>
+      <section class="friends_section">
+        <header class="friends_section-header">
+          <h6 class="friends_section-title"></h6>
+        </header>
+        <div class="friends_section-rows">
+          <div class="friends_section-row">
+            <img src="" alt="" />
+            <span class="friends_section-name">Nicolas</span>
+          </div>
+          <span class="friends_section-tagline">
+            Life is short. So live your life.
+          </span>
+        </div>
+      </section>
+    </main>
+    <nav class="tab-bar">
+      <a href="index.html" class="tab-bar_tab tab-bar_tab--selected">
+        <i class="fa fa-user"></i> <span class="tab-bar_title">Friends</span>
+      </a>
+      <a href="chats.html" class="tab-bar_tab">
+        <i class="fa fa-comment"></i> <span class="tab-bar_title">Chats</span>
+      </a>
+      <a href="find.html" class="tab-bar_tab">
+        <i class="fa fa-search"></i> <span class="tab-bar_title">Find</span>
+      </a>
+      <a href="more.html" class="tab-bar_tab">
+        <i class="fa fa-ellipsis-h"></i> <span class="tab-bar_title">More</span>
+      </a>
+    </nav>
   </body>
 </html>
