--- a/more.html
+++ b/more.html
@@ -33,6 +33,96 @@
         </div>
       </div>
     </header>
+    <main class="more">
+      <header class="more_header">
+        <div class="more-header_column">
+          <img src="images/avatar.jpg" alt="" />
+          <div class="more-header_info">
+            <h3 class="more-header_title">Nicolas</h3>
+            <span class="header_subtitle"> itnicolasme@gmail.com </span>
+          </div>
+        </div>
+        <i class="far fa-comment fa-2x"></i>
+      </header>
+      <section class="more_options">
+        <div class="more_option">
+          <i class="far fa-smile fa-2x"></i>
+          <span class="more_option-title">Emoticons</span>
+        </div>
+        <div class="more_option">
+          <i class="fa fa-paint-brush fa-2x"></i>
+          <span class="more_option-title">Themes</span>
+        </div>
+        <div class="more_option">
+          <i class="far fa-hand-peace fa-2x"></i>
+          <span class="more_option-title">Plus Friend</span>
+        </div>
+        <div class="more_option">
+          <i class="far fa-user-circle fa-2x"></i>
+          <span class="more_option-title">Account</span>
+        </div>
+      </section>
+      <section class="more_plus-friends">
+        <header class="plus-friends_header">
+          <h2 class="plus-friends_title">Plus Friends</h2>
+          <span class="plus-friends_learn-more">
+            <i class="fa fa-info-circle"></i> Learn More
+          </span>
+        </header>
+        <div class="plus-friends_items">
+          <div class="plus-friends_item">
+            <i class="fas fa-utensils"></i>
+            <span class="plus-friends_item-title">Order</span>
+          </div>
+          <div class="plus-friends_item">
+            <i class="fas fa-home"></i>
+            <span class="plus-friends_item-title">Store</span>
+          </div>
+          <div class="plus-friends_item">
+            <i class="fas fa-tv"></i>
+            <span class="plus-friends_item-title">TV Channel/Radio</span>
+          </div>
+          <div class="plus-friends_item">
+            <i class="fas fa-pencil-alt"></i>
+            <span class="plus-friends_item-title">Creation</span>
+          </div>
+          <div class="plus-friends_item">
+            <i class="fas fa-graduation-cap"></i>
+            <span class="plus-friends_item-title">Education</span>
+          </div>
+          <div class="plus-friends_item">
+            <i class="fas fa-landmark"></i>
+            <span class="plus-friends_item-title">Politics/Society</span>
+          </div>
+          <div class="plus-friends_item">
+            <i class="fas fa-won-sign"></i>
+            <span class="plus-friends_item-title">Finance</span>
+          </div>
+          <div class="plus-friends_item">
+            <i class="fas fa-video"></i>
+            <span class="plus-friends_item-title">Movies/Music</span>
+          </div>
+        </div>
+      </section>
+      <section class="more_options">
+        <div class="more_option">
+          <img src="images/kakaoStory.png" alt="" class="more_options-image" />
+          <span class="more_options-title">Kakao Story</span>
+        </div>
+        <div class="more_option">
+          <img src="images/path.png" alt="" class="more_options-image" />
+          <span class="more_options-title">Path</span>
+        </div>
+        <div class="more_option">
+          <img
+            src="images/kakaoFriends.png"
+            alt=""
+            class="more_options-image"
+          />
+          <span class="more_options-title">Kakao friends</span>
+        </div>
+      </section>
+    </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar_tab">
         <i class="fa fa-user"></i> <span class="tab-bar_title">Friends</span>
