--- a/chat.html
+++ b/chat.html
@@ -38,5 +38,26 @@
         </div>
       </div>
     </header>
+    <main class="chat">
+      <div class="date-divider">
+        <span class="date-divider_text">Wednesday, August 2, 2017</span>
+      </div>
+      <div class="chat_message chat_message-from-me">
+        <span class="chat_message-time">17:55</span>
+        <span class="chat_message-body"> Hello! This is a test message. </span>
+      </div>
+      <div class="chat_message chat_message--to-me">
+        <img src="images/avatar.png" alt="" class="chat_message-avatar" />
+        <div class="chat_message-center">
+          <h3 class="chat_message-username">Lynn</h3>
+        </div>
+        <span class="chat_message-time">19:55</span>
+      </div>
+    </main>
+    <div class="type-message"><i class="fa fa-plus fa-2x"></i></div>
+    <div class="type-message_input">
+      <input type="text" /> <i class="far fa-smile"></i>
+      <span class="record-message"> <i class="fa fa-microphone"></i> </span>
+    </div>
   </body>
 </html>
