Chat + Back to page links

--- a/index.html
+++ b/index.html
@@ -45,12 +45,16 @@
         <header><h6 class="friends_section-title">My Profile</h6></header>
         <div class="friends_section-rows">
           <div class="friends_section-row">
-            <img src="" alt="" />
-            <span class="friends_section-name">Nicolas</span>
+            <a href="profile.html">
+              <img src="images/avatar.png" />
+              <span class="friends_section-name">Nicolas</span>
+            </a>
           </div>
           <div class="friends_section-row">
-            <img src="" alt="" />
-            <span class="friends_section-name">Friends' Names Display</span>
+            <a href="profile.html">
+              <img src="images/avatar.png" />
+              <span class="friends_section-name">Friends' Names Display</span>
+            </a>
           </div>
         </div>
       </section>
@@ -60,8 +64,10 @@
         </header>
         <div class="friends_section-rows">
           <div class="friends_section-row">
-            <img src="" alt="" />
-            <span class="friends_section-name">Nicolas</span>
+            <a href="profile.html">
+              <img src="images/avatar.png" />
+              <span class="friends_section-name">Nicolas</span>
+            </a>
           </div>
           <span class="friends_section-tagline">
             Life is short. So live your life.
