--- a/profile.html
+++ b/profile.html
@@ -27,10 +27,33 @@
         </div>
       </div>
       <div class="header_bottom">
-        <div class="header_column"><i class="fa fa-times fa-lg"></i></div>
+        <div class="header_column">
+          <a href="index.html"> <i class="fa fa-times fa-lg"></i> </a>
+        </div>
         <div class="header_column"></div>
         <div class="header_column"><i class="fa fa-user fa-lg"></i></div>
       </div>
     </header>
+    <main class="profile">
+      <header class="profile_header">
+        <img src="images/avatar.png" alt="" />
+        <h3 class="profile_header-title">Nicolas</h3>
+      </header>
+      <input type="text" placeholder="angineer01@gmail.com" />
+      <div class="profile_actions">
+        <div class="profile_action">
+          <span class="profile_action-circle">
+            <i class="fa fa-comment fa-2x"></i>
+          </span>
+          <span class="profile_action-title">My Chatroom</span>
+        </div>
+        <div class="profile_action">
+          <span class="profile_action-circle">
+            <i class="fas fa-pencil-alt fa-2x"></i>
+          </span>
+          <span class="profile_action-title">Edit profile</span>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
