--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
       </div>
       <div class="header_bottom">
         <div class="header_column">
-          <i class="fa fa-chevron-left fa-lg"></i>
+          <a href="chats.html"> <i class="fa fa-chevron-left fa-lg"></i> </a>
         </div>
         <div class="header_column"><span class="header_text">Lynn</span></div>
         <div class="header_column">
