chats_css is done

--- a/chat.html
+++ b/chat.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <title>Chat</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header_top">
         <div class="header_column">
           <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
@@ -28,7 +29,7 @@
       </div>
       <div class="header_bottom">
         <div class="header_column">
-          <a href="chats.html"> <i class="fa fa-chevron-left fa-lg"></i> </a>
+          <a href="chats.html"> <i class="fas fa-chevron-left"></i> </a>
         </div>
         <div class="header_column"><span class="header_text">Lynn</span></div>
         <div class="header_column">
