--- a/profile.html
+++ b/profile.html
@@ -11,9 +11,10 @@
       crossorigin="anonymous"
     />
     <title>Profile</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header_top">
         <div class="header_column">
           <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
