--- a/chats.html
+++ b/chats.html
@@ -34,6 +34,7 @@
             >Chats <i class="fas fa-caret-down"></i
           ></span>
         </div>
+        <div class="header_column"></div>
       </div>
     </header>
     <main class="chats">
@@ -87,5 +88,8 @@
         <i class="fa fa-ellipsis-h"></i> <span class="tab-bar_title">More</span>
       </a>
     </nav>
+    <div class="bigScreenText">
+      <span>Please make your screen smaller</span>
+    </div>
   </body>
 </html>
