--- a/more.html
+++ b/more.html
@@ -28,6 +28,7 @@
         </div>
       </div>
       <div class="header_bottom">
+        <div class="header_column"></div>
         <div class="header_column"><span class="header_text">More</span></div>
         <div class="header_column">
           <span class="header_text"><i class="fa fa-cog fa-lg"></i> </span>
@@ -37,10 +38,10 @@
     <main class="more">
       <header class="more_header">
         <div class="more-header_column">
-          <img src="images/avatar.jpg" alt="" />
+          <img src="images/avatar.png" alt="" />
           <div class="more-header_info">
             <h3 class="more-header_title">Nicolas</h3>
-            <span class="header_subtitle"> itnicolasme@gmail.com </span>
+            <span class="more-header_subtitle"> itnicolasme@gmail.com </span>
           </div>
         </div>
         <i class="far fa-comment fa-2x"></i>
@@ -105,7 +106,7 @@
           </div>
         </div>
       </section>
-      <section class="more_options">
+      <section class="more_links">
         <div class="more_option">
           <img src="images/kakaoStory.png" alt="" class="more_options-image" />
           <span class="more_options-title">Kakao Story</span>
@@ -138,5 +139,8 @@
         <i class="fa fa-ellipsis-h"></i> <span class="tab-bar_title">More</span>
       </a>
     </nav>
+    <div class="bigScreenText">
+      <span>Please make your screen smaller</span>
+    </div>
   </body>
 </html>
