--- a/chat.html
+++ b/chat.html
@@ -13,8 +13,8 @@
     <title>Chat</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
-    <header class="top-header">
+  <body class="body-chat">
+    <header class="top-header chat-header">
       <div class="header_top">
         <div class="header_column">
           <i class="fas fa-fighter-jet"></i> <i class="fas fa-wifi"></i>
@@ -51,14 +51,22 @@
         <img src="images/avatar.png" alt="" class="chat_message-avatar" />
         <div class="chat_message-center">
           <h3 class="chat_message-username">Lynn</h3>
+          <span class="chat_message-body">And this is an answer</span>
         </div>
         <span class="chat_message-time">19:55</span>
       </div>
     </main>
-    <div class="type-message"><i class="fa fa-plus fa-2x"></i></div>
-    <div class="type-message_input">
-      <input type="text" /> <i class="far fa-smile"></i>
-      <span class="record-message"> <i class="fa fa-microphone"></i> </span>
+    <div class="type-message">
+      <i class="fa fa-plus fa-2x"></i>
+      <div class="type-message_input">
+        <input type="text" /> <i class="far fa-smile fa-lg"></i>
+        <span class="record-message">
+          <i class="fa fa-microphone fa-lg"></i>
+        </span>
+      </div>
+    </div>
+    <div class="bigScreenText">
+      <span>Please make your screen smaller</span>
     </div>
   </body>
 </html>
