--- a/find.html
+++ b/find.html
@@ -30,6 +30,7 @@
       <div class="header_bottom">
         <div class="header_column"><span class="header_text">Edit</span></div>
         <div class="header_column"><span class="header_text">Find </span></div>
+        <div class="header_column"></div>
       </div>
     </header>
     <main class="find">
@@ -43,7 +44,7 @@
           <span class="find_option-title">QR code</span>
         </div>
         <div class="find_option">
-          <i class="fa fa-mobile fa-2x"></i>
+          <i class="fa fa-mobile fa-lg"></i>
           <span class="find_option-title">Shake</span>
         </div>
         <div class="find_option">
@@ -52,7 +53,7 @@
         </div>
       </section>
       <section class="find_recommended">
-        <header><h6 class="recommended_title">recommended Friends</h6></header>
+        <header><h6 class="recommended_title">Recommended Friends</h6></header>
         <div class="recommended_none">
           <span class="recommended_text">You have no recommended friends.</span>
         </div>
@@ -72,5 +73,8 @@
         <i class="fa fa-ellipsis-h"></i> <span class="tab-bar_title">More</span>
       </a>
     </nav>
+    <div class="bigScreenText">
+      <span>Please make your screen smaller</span>
+    </div>
   </body>
 </html>
